# KeyViz

./: README.md  keyboard_helper.py  main.py  pyproject.toml  requirements.txt  sudo_helper.py
example_layouts/: dactyl_manuform_5x6.json  qwerty_standard.json
keyboard_visualizer/: __init__.py  __main__.py  default_config.json
keyboard_visualizer/core/: __init__.py  keyboard_manager.py
keyboard_visualizer/input/: __init__.py  keyboard_manager.py
keyboard_visualizer/ui/: __init__.py  canvas.py  dialogs.py  key.py  keyboard_canvas.py  keyboard_key.py  main_window.py
keyboard_visualizer/utils/: __init__.py  config.py  sudo_helper.py
layouts/: Dactyl-Manuform-(5x6+2)_1.json  dactyl_layout.json  qwerty_layout.json  small.json
src/keyboard_visualizer/: __main__.py
src/keyboard_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/keyboard_visualizer/core/: keyboard_manager.py
src/keyboard_visualizer/data/layouts/: dactyl_manuform_5x6.json
src/keyboard_visualizer/ui/: main_window.py
src/keyboard_visualizer/ui/components/: keyboard_canvas.py  keyboard_key.py
src/keyboard_visualizer/ui/dialogs/: settings_dialog.py
src/keyboard_visualizer/utils/: config.py  keyboard_helper.py  sudo_helper.py  system_utils.py
